--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-apring.application.name=demo-discovery-client
+spring.application.name=demo-discovery-client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 server.port=8989
